Squash and merge: tested